--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,47 +4,13 @@
 // variables
 $pm-col: #090F29;
 $sec-col: #5AFEA5;
-$sec-col-dark: #184D47;
+$sec-col-dark: #dfdfdf;
 $wh-col: #fff;
-$tx-cl: #4F4F4F;
-$clr-1: #D6EFC7;
-$clr-2: #FFC56F;
+$tx-cl: #333333;
+$clr-1: #4f4f4f;
+$clr-2: #3f3f3f;
 
 
-.mr-topmin-200 {margin-top: -200px;}
-.mr-topmin-150 {margin-top: -150px;}
-.mr-topmin-50 {margin-top: -50px;}
-
-.mr-btm-40{margin-bottom: 40px;;}
-
-.mr-top-250{margin-top: 250px;}
-.mr-top-250-dn{margin-top: 250px;}
-.clr-dark{color: $sec-col-dark;}
-
-
-h2 .tx-headline{
-    font-size: 2.3rem;
-    font: 700 !important;
-}
-
-.btn-def{
-    background-color: $clr-2;
-    color: $sec-col-dark;
-    padding: 10px 35px;
-    font-weight: 700;
-    font-size: 0.9rem;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-
-.btn-def:hover{
-    background-color: $sec-col-dark;
-    color: $wh-col;
-}
-
-.img-brd{
-    border-radius: 66px 2px 66px 2px;
-}
 
 
 // mixin
@@ -72,7 +38,7 @@ h2 .tx-headline{
 // styles
 body{
     font-family: 'Montserrat', sans-serif;
-    background-image: url(/img/bg-sc1.png) !important;
+    // background-image: url(/img/bg-sc1.png) !important;
     /* Full height */
      height: 100% !important; 
      width: 100% !important;
@@ -111,246 +77,10 @@ body{
      }
 }
 
-.img-responsive{
-    width: 100%;
-}
-
-.list-layanan{
-    margin-bottom: 32px;
-    padding: 0 12px;
-    text-align: center;
-    background-color: #D6EFC7;
-    padding: 18px;
-    border-radius: 12px;
-}
-.iconlayanan{
-    
-
-    .box-icon{
-        border-radius: 8px ;
-        width: 80px;
-        height: 80px;
-        padding: 14px;
-        background-color: #ffffff;
-    }
-}
-.contentlayanan{
-    padding: 10px 20px 40px 0;
-    text-align: left;
-}
-
-.jdl-icon{
-    font-weight: 700;
-    font-size: 20px;
-    margin-bottom: 6px;
-    margin-top: 10px;
-}
-
-//CARD KEGIATRAN
-.list-kegiatan{
-    margin-bottom: 20px;
-    padding: 0 12px;
-    text-align: center;
-    // background-color: #D6EFC7;
-    padding: 0 12px;
-    // border-radius: 12px;
-    color: $sec-col-dark
-}
-.thumbnail{
-    background-color: wheat;
-    border-radius: 8px;
-    overflow: hidden;
-
-    .small-card{
-        width: 50%;
-        height: 50%;
-    }
-}
-.thumbnail{
-    background-color: wheat;
-    border-radius: 8px;
-    overflow: hidden;
-
-    .small-photo{
-        width: 100%;
-    }
-}
-.contentkegiatan{
-    padding: 10px 20px 40px 0;
-    text-align: left;
-}
-.tglartikel{
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 13px;
-    color: #000;
-    opacity: .5;
-    margin-bottom: 6px;
-}
-.jdl-kegiatan{
-    font-weight: 700;
-    font-size: 20px;
-    margin-bottom: 6px;
-    margin-top: 10px;
-}
-
-
-.small-sys{
-    font-size: 15px;
-    line-height: 25px;
-    color: $pm-col;
-    font-weight: normal;
-    color: $tx-cl;
-}
-
-
-// Section 1
-.bg-sc1{
-    
-}
-.section-1{
-    
-    h2{
-        .tx-normal{
-            font-size: 2.3rem;
-            font-weight: 700;
-            color: $sec-col-dark;
-        }
-        font-size: 2.5rem;
-        font-weight: 700;
-        color: $sec-col-dark;
-        margin-top: 60px;
-    }
-    h5.tx-normal{
-        color: $sec-col-dark;
-        
-    }
-    p{
-        color:$tx-cl;
-        // font-weight: 600;
-        margin-top: 20px;
-    }
-    a{
-        margin-top: 60px;
-    }
-    .sc1-btn{
-        font-size: 1rem;
-        @include tombol;
-
-        &:hover{
-            background-color: $sec-col-dark;
-        }
-    }
-    .sc1-btn-outline{
-        font-size: 1rem;
-        @include tombol-out;
-
-        &:hover{
-            background-color: $sec-col-dark;
-            color: $pm-col;
-        }
-
-    }
-
-    .img-custom{
-        height: 40%;
-        width: 40%;
-    }
-
-}
-
-//SC2
-.sc-2{
-    background-color: $sec-col-dark;
-    padding-bottom: 20px;
-
-    background-image: url(/img/bg-sc2.png) !important;
-    /* Full height */
-     height: 100% !important; 
-     width: 100% !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    // background-position:50% -100% !important;
-
-    h2{
-        .tx-normal{
-            font-size: 2.3rem;
-            font-weight: 700;
-        }
-        font-size: 2.5rem;
-        font-weight: 700;
-        color: $wh-col;
-        margin-top: 60px;
-    }
-
-
-    
-    
-
-}
-
-//section 3
-.sc-3.bg-img-sc3{
-
-    background-image: url(/img/bg-sc3.png) !important;
-    /* Full height */
-     height: 100% !important; 
-     width: 100% !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    // background-position:50% -100% !important;
-}
-//section 4
-.sc-4.bg-img-sc4{
-
-    background-image: url(/img/bg-sc4.png) !important;
-    /* Full height */
-     height: 100% !important; 
-     width: 100% !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    // background-position:50% -100% !important;
-}
-.box-donasi{
-    background-color: $clr-1;
-    border-radius: 6px;
-    padding: 60px 40px;
-    margin-bottom: 80px;
-}
-
-.tx-qn{
-    // line-height: 27;
-    font-weight: 600;
-    font-size: 0.9rem;
-    margin-bottom: 40px;
-}
-.tx-dn{
-    // line-height: 27;
-    font-weight: 500;
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-}
-
-.img-dn{
-    position: relative;
-    top: 66px;
-    left: 12%;
-    margin-top: -171px;
-    width: 83%;
-    text-align: center;
-}
 
 //Footer
 footer.footer-area{
     background-color: $sec-col-dark;
-    margin-top: -300px;
-    padding-top: 400px;
     
     ul {
         padding:0;
@@ -491,115 +221,5 @@ footer.footer-area{
 
 
 @media (max-width: 767.98px) { 
-    .pd-lf-30-xs {padding-left: 30px;}
     
-    h2.tx-headline{
-        font-size: 1.2rem;
-        font-weight: 700 !important;
-        margin: 55px 0 15px 0;
-    }
-    
-
-    .tx-cntr-xs{text-align: center;}
-
-    .row>*{
-        flex-shrink: 0;
-        width: 100%;
-        max-width: 100%;
-        padding-right: calc(var(--bs-gutter-x)/ 2);
-        padding-left: calc(var(--bs-gutter-x)/ 2);
-        margin-top: var(--bs-gutter-y);}
-
-        //NAVBAR
-    .navbar{
-        .navbar-brand{
-           display: contents !important; 
-        }
-    }
-    .logo-xs{
-        width: 50%;
-    }
-
-    // .mr-ml-15{
-    //     margin-left: 15px;
-    //     margin-right: 15px;
-    // }
-
-    .row{
-        margin-left: unset;
-        margin-right: unset;
-        
-    }
-    .section-1 h2{
-        margin-top: 10px;
-        margin-bottom: 2px;
-    }
-
-    // Section 1
-    h2{
-        .tx-normal{
-            font-size: 1.2rem !important;
-            font-weight: 700 !important;
-        }
-    }
-    h5.tx-normal{
-        color: $sec-col-dark;
-        font-size: 0.9rem;
-        margin-top: 4px;
-        
-    }
-    .section-1{
-        p{
-            font-size: 0.8rem !important;
-            color:$tx-cl !important;
-            // font-weight: 600;
-            margin-top: 10px !important;
-            margin-bottom: 40px !important;
-        }
-    }
-
-    //section 2
-
-    .mr-top-250{
-        margin-top: 200px;
-    }
-    .sc-2{
-        .card{
-            margin-bottom: 12px;
-        }
-    }
-
-    .list-layanan{
-        
-        p{font-size: 12px;}
-    }
-
-    //section 4
-    .mr-top-250-dn{margin-top: 40px;}
-    .tx-center-xs{text-align: center;}
-    .box-donasi{
-        background-color: $clr-1;
-        border-radius: 6px;
-        padding: 34px;
-    }
-
-    .tx-qn{
-        // line-height: 27;
-        font-weight: 600;
-        font-size: 0.9rem;
-        margin-bottom: 40px;
-    }
-    .tx-dn{
-        // line-height: 27;
-        font-weight: 500;
-        font-size: 0.9rem;
-        margin-bottom: 10px;
-    }
-
-    footer.footer-area{
-        margin-top: -250px;
-    }
-    
-    
-
 }
