--- a/scss/main.css
+++ b/scss/main.css
@@ -1,8 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 .header-bold {
   font-size: 64px;
   font-weight: 600;
   color: #0F4C75;
+}
+
+.ct-header {
+  font-size: 48px;
+  font-weight: 500;
+}
+
+.ct {
+  font-weight: 400;
+  font-size: 24px;
+  color: #333333;
+  letter-spacing: 1.5%;
+  line-height: 34px;
+}
+
+.ct-caption {
+  font-size: 18px;
+  font-weight: 400;
+  color: #666666;
+}
+
+.mr-bt-8 {
+  margin-bottom: 8px;
+}
+
+.mr-bt-16 {
+  margin-bottom: 16px;
+}
+
+.mr-bt-24 {
+  margin-bottom: 24px;
+}
+
+.mr-bt-32 {
+  margin-bottom: 32px;
+}
+
+.mr-tp-32 {
+  margin-top: 32px;
+}
+
+.mr-tp-64 {
+  margin-top: 64px;
 }
 
 body {
@@ -14,7 +61,7 @@ body {
   background-position: center !important;
   background-repeat: no-repeat !important;
   background-repeat: no-repeat !important;
-  background-position: 100% 44% !important;
+  background-position: 100% 20% !important;
   scroll-behavior: smooth;
 }
 
@@ -24,11 +71,11 @@ body {
 }
 
 .navbar a {
-  color: #dfdfdf;
+  color: #666666;
 }
 
 .navbar a:hover {
-  color: #3f3f3f;
+  color: #0F4C75;
 }
 
 .navbar .nav-item {
@@ -51,7 +98,7 @@ body {
 }
 
 .section-1 {
-  margin-top: 200px;
+  margin-top: 125px;
 }
 
 .section-1 .title {
@@ -66,6 +113,101 @@ body {
   color: #333333;
   letter-spacing: 1.5%;
   line-height: 34px;
+}
+
+.section-1 .rect-icon-linkedin {
+  color: #fff;
+  background-color: #0F4C75;
+  border: unset;
+  -webkit-transition: .2s ease-in-out 0s;
+  transition: .2s ease-in-out 0s;
+  margin-left: 8px;
+  margin-right: 0px;
+  font-size: 32px;
+  text-decoration: unset;
+  text-decoration: none;
+  margin-left: 0px;
+}
+
+.section-1 .rect-icon-linkedin:hover {
+  color: #fff;
+  background-color: #0F4C75;
+  border: unset;
+  -webkit-transition: .2s ease-in-out 0s;
+  transition: .2s ease-in-out 0s;
+  margin-left: 8px;
+  margin-right: 0px;
+  font-size: 32px;
+  text-decoration: unset;
+  text-decoration: none;
+  color: #0e76a8;
+  background-color: #e6f5ff;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.section-1 .rect-icon-wa {
+  color: #fff;
+  background-color: #0F4C75;
+  border: unset;
+  -webkit-transition: .2s ease-in-out 0s;
+  transition: .2s ease-in-out 0s;
+  margin-left: 8px;
+  margin-right: 0px;
+  font-size: 32px;
+  text-decoration: unset;
+  text-decoration: none;
+}
+
+.section-1 .rect-icon-wa:hover {
+  color: #fff;
+  background-color: #0F4C75;
+  border: unset;
+  -webkit-transition: .2s ease-in-out 0s;
+  transition: .2s ease-in-out 0s;
+  margin-left: 8px;
+  margin-right: 0px;
+  font-size: 32px;
+  text-decoration: unset;
+  text-decoration: none;
+  color: #128c7e;
+  background-color: #e6f5ff;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.sc-2 {
+  background-color: #F3FAFF;
+  padding-top: 68px;
+  padding-bottom: 200px;
+}
+
+.sc-2 .title-sc2 {
+  margin-bottom: 64px;
+}
+
+.sc-2 .box-project {
+  margin-bottom: 24px;
+  margin-top: 24px;
+}
+
+.sc-2 .link-action {
+  margin-top: 24px;
+  font-size: 24px;
+  font-weight: 500;
+  color: #0F4C75 !important;
+  -webkit-transition: .2s ease-in-out 0s;
+  transition: .2s ease-in-out 0s;
+}
+
+.sc-2 .link-action a {
+  color: #0F4C75 !important;
+}
+
+.sc-2 .link-action:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  margin-left: 12px;
 }
 
 footer.footer-area {
@@ -245,15 +387,32 @@ footer.footer-area .widget-about .contact-details li a {
 
 @media (max-width: 767.98px) {
   body {
-    background-position: 32% 56% !important;
+    background-position: 32% 30% !important;
   }
   .bg-sc1 {
     margin-bottom: 200px;
   }
   .header-bold {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 600;
     color: #0F4C75;
+  }
+  .ct-header {
+    font-size: 28px;
+    font-weight: 500;
+    margin-top: 12px;
+  }
+  .ct {
+    font-weight: 400;
+    font-size: 20px;
+    color: #333333;
+    letter-spacing: 1.5%;
+    line-height: 34px;
+  }
+  .ct-caption {
+    font-size: 16px;
+    font-weight: 400;
+    color: #666666;
   }
   .section-1 {
     margin-top: 80px;
@@ -269,6 +428,33 @@ footer.footer-area .widget-about .contact-details li a {
     color: #333333;
     letter-spacing: 1.5%;
     line-height: 34px;
+  }
+  .sc-2 {
+    padding-top: 24px;
+    padding-bottom: 200px;
+  }
+  .sc-2 .title-sc2 {
+    margin-bottom: 8px;
+  }
+  .sc-2 .box-project {
+    margin-bottom: 24px;
+    margin-top: 24px;
+  }
+  .sc-2 .link-action {
+    margin-top: 24px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #0F4C75 !important;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+  }
+  .sc-2 .link-action a {
+    color: #0F4C75 !important;
+  }
+  .sc-2 .link-action:hover {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    margin-left: 12px;
   }
 }
 /*# sourceMappingURL=main.css.map */
