--- a/scss/main.css
+++ b/scss/main.css
@@ -3,8 +3,18 @@ html {
   scroll-behavior: smooth;
 }
 
+.btn-link-custom {
+  color: #0F4C75;
+  padding: unset;
+}
+
+.btn-link-custom:hover {
+  color: #042032;
+  text-decoration: unset;
+}
+
 .header-bold {
-  font-size: 64px;
+  font-size: 48px;
   font-weight: 600;
   color: #0F4C75;
 }
@@ -15,7 +25,7 @@ html {
 }
 
 .ct {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 24px;
   color: #333333;
   letter-spacing: 1.5%;
@@ -23,9 +33,16 @@ html {
 }
 
 .ct-caption {
-  font-size: 18px;
+  margin-top: 8px;
+  font-size: 14px;
   font-weight: 400;
-  color: #666666;
+  color: #A6A6A6;
+}
+
+.title {
+  font-size: 18px;
+  font-weight: 500;
+  color: #A6A6A6;
 }
 
 .mr-bt-8 {
@@ -44,6 +61,10 @@ html {
   margin-bottom: 32px;
 }
 
+.mr-tp-8 {
+  margin-top: 8px;
+}
+
 .mr-tp-32 {
   margin-top: 32px;
 }
@@ -52,16 +73,23 @@ html {
   margin-top: 64px;
 }
 
+.mr-rg-16 {
+  margin-right: 16px;
+}
+
+.im-project {
+  border: unset;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url(/img/elipse.png) !important;
+  background-image: url(/img/bg-test.png);
   /* Full height */
-  height: 100% !important;
-  width: 100% !important;
-  background-position: center !important;
+  height: 33,333% !important;
+  width: 33,333% !important;
   background-repeat: no-repeat !important;
   background-repeat: no-repeat !important;
-  background-position: 100% 20% !important;
+  background-position: 100% -20%;
   scroll-behavior: smooth;
 }
 
@@ -102,14 +130,14 @@ body {
 }
 
 .section-1 .title {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 500;
   color: #A6A6A6;
 }
 
 .section-1 .content {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 16px;
   color: #333333;
   letter-spacing: 1.5%;
   line-height: 34px;
@@ -182,7 +210,7 @@ body {
 }
 
 .sc-2 .title-sc2 {
-  margin-bottom: 64px;
+  margin-bottom: 32px;
 }
 
 .sc-2 .box-project {
@@ -378,45 +406,67 @@ footer.footer-area .widget-about .contact-details li a {
   }
 }
 
+@media only screen and (max-width: 1600px) {
+  body {
+    background-size: 80%;
+    background-position: 100% -5%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  body {
+    background-size: 75%;
+    background-position: 100% 21%;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   .header-bold {
     font-size: 44px;
     font-weight: 600;
     color: #0F4C75;
   }
+  body {
+    background-size: 75%;
+    background-position: 100% 4%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  body {
+    background-image: url(/img/bg-test2.png);
+    background-position: 50% 0%;
+    background-size: 200%;
+  }
 }
 
 @media (max-width: 767.98px) {
-  body {
-    background-position: 32% 30% !important;
+  .btn-link-custom {
+    font-size: 14px;
   }
   .bg-sc1 {
-    margin-bottom: 200px;
+    margin-bottom: 80px;
   }
   .header-bold {
     font-size: 30px;
     font-weight: 600;
     color: #0F4C75;
   }
-  .ct-header {
-    font-size: 24px;
-    font-weight: 500;
-    margin-top: 12px;
-  }
   .ct {
-    font-weight: 400;
-    font-size: 16px;
+    font-weight: 500;
+    font-size: 24px;
     color: #333333;
     letter-spacing: 1.5%;
-    line-height: 20px;
+    line-height: 34px;
   }
   .ct-caption {
-    font-size: 14px;
+    margin-top: 8px;
+    font-size: 10px;
     font-weight: 400;
-    color: #666666;
+    color: #A6A6A6;
   }
   .section-1 {
-    margin-top: 80px;
+    margin-top: 40px;
   }
   .section-1 .title {
     font-size: 16px;
@@ -429,6 +479,63 @@ footer.footer-area .widget-about .contact-details li a {
     color: #333333;
     letter-spacing: 1.5%;
     line-height: 34px;
+  }
+  .section-1 .rect-icon-linkedin {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+    margin-left: 0px;
+  }
+  .section-1 .rect-icon-linkedin:hover {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+    color: #0e76a8;
+    background-color: #e6f5ff;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  .section-1 .rect-icon-wa {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+  }
+  .section-1 .rect-icon-wa:hover {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+    color: #128c7e;
+    background-color: #e6f5ff;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
   .sc-2 {
     padding-top: 24px;
