--- a/scss/main.css
+++ b/scss/main.css
@@ -599,6 +599,34 @@ footer.footer-area .widget-about .contact-details li a {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
   }
+  .section-1 .rect-icon-db {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+  }
+  .section-1 .rect-icon-db:hover {
+    color: #fff;
+    background-color: #0F4C75;
+    border: unset;
+    -webkit-transition: .2s ease-in-out 0s;
+    transition: .2s ease-in-out 0s;
+    margin-left: 8px;
+    margin-right: 0px;
+    font-size: 24px;
+    text-decoration: unset;
+    text-decoration: none;
+    color: #ea4c89;
+    background-color: #e6f5ff;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
   .sc-2 {
     padding-top: 24px;
     padding-bottom: 80px;
