--- a/scss/main.scss
+++ b/scss/main.scss
@@ -142,6 +142,11 @@ html {
 // styles
 body{
     font-family: 'Poppins', sans-serif;
+    
+    scroll-behavior: smooth;
+    // background-color: #fff !important;
+}
+.image-bg-home{
     background-image: url(/img/bg-test.png) ;
     /* Full height */
      height: 33,333% !important; 
@@ -150,8 +155,6 @@ body{
     // background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position:100% -6% ;
-    scroll-behavior: smooth;
-    // background-color: #fff !important;
 }
 
 //Navbar
@@ -435,7 +438,8 @@ footer.footer-area{
 
 @media only screen and (max-width: 1600px){
    
-    body{
+    
+    .image-bg-home{
         background-size: 80%;
         background-position:100% -5% ;
     }
@@ -444,10 +448,11 @@ footer.footer-area{
 }
 @media only screen and (max-width: 1200px){
    
-    body{
+    .image-bg-home{
         background-size: 75%;
         background-position:100% 2% ;
     }
+    
 
 }
 
@@ -462,7 +467,7 @@ footer.footer-area{
         font-weight: $fwg-bd;
         color: $primary;
     }
-    body{
+    .image-bg-home{
         background-size: 75%;
         background-position:100% 4% ;
     }
@@ -470,7 +475,7 @@ footer.footer-area{
 }
 @media only screen and (max-width: 991px){
    
-    body{
+    .image-bg-home{
         background-image: url(/img/bg-test2.png) ;
         background-position:50% 0% ;
         background-size: 200%;
