--- a/scss/main.scss
+++ b/scss/main.scss
@@ -277,7 +277,7 @@ body{
 }
 
 .sc-3{
-    background-color: #EAF3FC;
+    background-color: #DFFFDE;
     padding: 84px 0 0 0;
 }
 .sc-4{
@@ -285,7 +285,10 @@ body{
     margin-bottom: $sp-32;
     margin-top: $sp-32;
 }
+.explr-1{
+    background-color: #D4EAFF;
 
+}
 
 .card-contact{
     background-color: #C2E4FF;
@@ -481,7 +484,7 @@ footer.footer-area{
         background-size: 200%;
     }
     .sc-3{
-        background-color: #EAF3FC;
+        // background-color: #EAF3FC;
         padding: 32px 0 0 0;
     }
     .sc-4{
@@ -617,7 +620,7 @@ footer.footer-area{
     }
 
     .sc-3{
-        background-color: #EAF3FC;
+        // background-color: #EAF3FC;
         padding: 32px 0 0 0;
     }
 
