--- a/scss/main.css
+++ b/scss/main.css
@@ -7,7 +7,6 @@ html {
   color: #0F4C75;
   padding: unset;
 }
-
 .btn-link-custom:hover {
   color: #042032;
   text-decoration: unset;
@@ -89,16 +88,20 @@ html {
   border: unset;
 }
 
+.br-rad-8 {
+  border-radius: 8px;
+}
+
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
 
 .image-bg-home {
   background-image: url(/img/bg-test.png);
   /* Full height */
-  height: 33,333% !important;
-  width: 33,333% !important;
+  height: 33, 333% !important;
+  width: 33, 333% !important;
   background-repeat: no-repeat !important;
   background-repeat: no-repeat !important;
   background-position: 100% -6%;
@@ -108,26 +111,19 @@ body {
   font-size: 1rem;
   font-weight: 500;
 }
-
 .navbar a {
   color: #666666;
 }
-
 .navbar a:hover {
   color: #0F4C75;
 }
-
 .navbar .nav-item {
   margin-left: 2.2em;
 }
-
 .navbar .navbar-collapse {
   text-align: right;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  justify-content: left;
 }
-
 .navbar .navbar-brand {
   display: contents !important;
 }
@@ -139,13 +135,11 @@ body {
 .section-1 {
   margin-top: 125px;
 }
-
 .section-1 .title {
   font-size: 18px;
   font-weight: 500;
   color: #A6A6A6;
 }
-
 .section-1 .content {
   font-weight: 400;
   font-size: 16px;
@@ -153,13 +147,11 @@ body {
   letter-spacing: 1.5%;
   line-height: 34px;
 }
-
 .section-1 .rect-icon-linkedin {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
@@ -167,13 +159,11 @@ body {
   text-decoration: none;
   margin-left: 0px;
 }
-
 .section-1 .rect-icon-linkedin:hover {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
@@ -181,29 +171,24 @@ body {
   text-decoration: none;
   color: #0e76a8;
   background-color: #e6f5ff;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
-
 .section-1 .rect-icon-wa {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
 }
-
 .section-1 .rect-icon-wa:hover {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
@@ -211,29 +196,24 @@ body {
   text-decoration: none;
   color: #128c7e;
   background-color: #e6f5ff;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
-
 .section-1 .rect-icon-db {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
   text-decoration: unset;
   text-decoration: none;
 }
-
 .section-1 .rect-icon-db:hover {
   color: #fff;
   background-color: #0F4C75;
   border: unset;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
   margin-left: 8px;
   margin-right: 0px;
   font-size: 32px;
@@ -241,42 +221,34 @@ body {
   text-decoration: none;
   color: #ea4c89;
   background-color: #e6f5ff;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .sc-2 {
   padding-top: 68px;
   padding-bottom: 100px;
 }
-
 .sc-2 .title-sc2 {
   margin-bottom: 32px;
 }
-
 .sc-2 .box-project {
   margin: 8px 0px;
   padding: 16px 0px;
   background-color: #F5F5F5;
   border-radius: 6px;
 }
-
 .sc-2 .link-action {
   margin-top: 24px;
   font-size: 24px;
   font-weight: 500;
   color: #0F4C75 !important;
-  -webkit-transition: .2s ease-in-out 0s;
-  transition: .2s ease-in-out 0s;
+  transition: 0.2s ease-in-out 0s;
 }
-
 .sc-2 .link-action a {
   color: #0F4C75 !important;
 }
-
 .sc-2 .link-action:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  transform: scale(1.05);
   margin-left: 12px;
 }
 
@@ -303,53 +275,42 @@ body {
 footer.footer-area {
   background-color: #0F4C75;
 }
-
 footer.footer-area ul {
   padding: 0;
   margin: 0;
 }
-
 footer.footer-area li {
   list-style: none;
 }
-
 footer.footer-area a:focus, footer.footer-area a:hover {
   text-decoration: none;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
-
 footer.footer-area a:focus {
   outline: 0;
 }
-
 footer.footer-area img {
   max-width: 100%;
 }
-
 footer.footer-area p {
   font-size: 16px;
   line-height: 30px;
   color: #fff;
   font-weight: 300;
 }
-
 footer.footer-area h4 {
-  font-family: Rubik,sans-serif;
+  font-family: Rubik, sans-serif;
   margin: 0;
   font-weight: 400;
   padding: 0;
   color: #fff;
 }
-
 footer.footer-area a {
   color: #5867dd;
 }
-
 footer.footer-area .no-padding {
   padding: 0 !important;
 }
-
 footer.footer-area .go_top {
   line-height: 40px;
   cursor: pointer;
@@ -357,110 +318,86 @@ footer.footer-area .go_top {
   background: #5867dd;
   color: #fff;
   position: fixed;
-  -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  right: calc((100% - 1140px)/ 2);
+  right: calc((100% - 1140px) / 2);
   z-index: 111;
   bottom: 80px;
   text-align: center;
 }
-
 footer.footer-area .go_top span {
   display: inline-block;
 }
-
 footer.footer-area .footer-big {
   padding: 105px 0 65px 0;
 }
-
 footer.footer-area .footer-big .footer-widget {
   margin-bottom: 40px;
 }
-
 footer.footer-area .footer--light {
   background: #e7e8ed;
 }
-
 footer.footer-area .footer-big .footer-menu ul li a, footer.footer-area .footer-big p, footer.footer-area .footer-big ul li {
   color: #fff;
 }
-
 footer.footer-area .footer-menu {
   padding-left: 48px;
 }
-
 footer.footer-area .footer-menu ul li a {
   font-size: 15px;
   line-height: 32px;
-  -webkit-transition: .3s;
-  transition: .3s;
+  transition: 0.3s;
 }
-
 footer.footer-area .footer-menu ul li a:hover {
   color: #5867dd;
 }
-
 footer.footer-area .footer-menu--1 {
   width: 100%;
 }
-
 footer.footer-area .footer-widget-title {
   line-height: 42px;
   margin-bottom: 10px;
   font-size: 18px;
 }
-
 footer.footer-area .mini-footer {
   background: #192027;
   text-align: center;
   padding: 32px 0;
 }
-
 footer.footer-area .mini-footer p {
   margin: 0;
   line-height: 26px;
   font-size: 15px;
   color: #999;
 }
-
 footer.footer-area .mini-footer p a {
   color: #fff;
 }
-
 footer.footer-area .mini-footer p a:hover {
   color: #34bfa3;
 }
-
 footer.footer-area .widget-about img {
   display: block;
   margin-bottom: 30px;
 }
-
 footer.footer-area .widget-about p {
   font-weight: 400;
 }
-
 footer.footer-area .widget-about .contact-details {
   margin: 30px 0 0 0;
 }
-
 footer.footer-area .widget-about .contact-details li {
   margin-bottom: 10px;
 }
-
 footer.footer-area .widget-about .contact-details li:last-child {
   margin-bottom: 0;
 }
-
 footer.footer-area .widget-about .contact-details li span {
   padding-right: 12px;
 }
-
 footer.footer-area .widget-about .contact-details li a {
   color: #fff;
 }
-
 @media (max-width: 991px) {
   footer.footer-area .footer-menu {
     padding-left: 0;
@@ -473,14 +410,12 @@ footer.footer-area .widget-about .contact-details li a {
     background-position: 100% -5%;
   }
 }
-
 @media only screen and (max-width: 1200px) {
   .image-bg-home {
     background-size: 75%;
     background-position: 100% 2%;
   }
 }
-
 @media only screen and (max-width: 1024px) {
   .header-bold {
     font-size: 44px;
@@ -492,7 +427,6 @@ footer.footer-area .widget-about .contact-details li a {
     background-position: 100% 4%;
   }
 }
-
 @media only screen and (max-width: 991px) {
   .image-bg-home {
     background-image: url(/img/bg-test2.png);
@@ -507,7 +441,6 @@ footer.footer-area .widget-about .contact-details li a {
     margin-top: 32px;
   }
 }
-
 @media (max-width: 767.98px) {
   .btn-link-custom {
     font-size: 14px;
@@ -552,8 +485,7 @@ footer.footer-area .widget-about .contact-details li a {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -565,8 +497,7 @@ footer.footer-area .widget-about .contact-details li a {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -574,15 +505,13 @@ footer.footer-area .widget-about .contact-details li a {
     text-decoration: none;
     color: #0e76a8;
     background-color: #e6f5ff;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    transform: scale(1.2);
   }
   .section-1 .rect-icon-wa {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -593,8 +522,7 @@ footer.footer-area .widget-about .contact-details li a {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -602,15 +530,13 @@ footer.footer-area .widget-about .contact-details li a {
     text-decoration: none;
     color: #128c7e;
     background-color: #e6f5ff;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    transform: scale(1.2);
   }
   .section-1 .rect-icon-db {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -621,8 +547,7 @@ footer.footer-area .widget-about .contact-details li a {
     color: #fff;
     background-color: #0F4C75;
     border: unset;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
     margin-left: 8px;
     margin-right: 0px;
     font-size: 24px;
@@ -630,8 +555,7 @@ footer.footer-area .widget-about .contact-details li a {
     text-decoration: none;
     color: #ea4c89;
     background-color: #e6f5ff;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    transform: scale(1.2);
   }
   .sc-2 {
     padding-top: 24px;
@@ -649,19 +573,16 @@ footer.footer-area .widget-about .contact-details li a {
     font-size: 16px;
     font-weight: 500;
     color: #0F4C75 !important;
-    -webkit-transition: .2s ease-in-out 0s;
-    transition: .2s ease-in-out 0s;
+    transition: 0.2s ease-in-out 0s;
   }
   .sc-2 .link-action a {
     color: #0F4C75 !important;
   }
   .sc-2 .link-action:hover {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    transform: scale(1.05);
     margin-left: 12px;
   }
   .sc-3 {
     padding: 32px 0 0 0;
   }
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
